deployments/staging/ti-api/40-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ti-api
  namespace: staging
  labels:
    app: ti-api
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ti-api
  template:
    metadata:
      labels:
        app: ti-api
        env: staging
    spec:
      containers:
        - name: ti-api
          # subsequent releases will use image version staging-{PIPELINE_ID}
          image: eu.gcr.io/timeline-investigator/ti-api:staging-latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "16Mi"
              cpu: "64m"
            limits:
              memory: "32Mi"
              cpu: "128m"
          volumeMounts:
          - name: config-volume
            mountPath: /configs
          - name: secrets
            mountPath: /etc/secret-volume/auth-credentials-file.json
            subPath: auth-credentials-file.json
            readOnly: true
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: config-volume
          configMap:
            # ConfigMap specified in 30-config.yml
            name: ti-api
        - name: secrets
          projected:
            sources:
            - secret:
                name: auth
                items:
                - key: credentials-file
                  path: auth-credentials-file.json
