deployments/staging/ti-api/20-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ti-api
  namespace: staging
  labels:
    app: ti-api
    env: staging
spec:
  selector:
    app: ti-api
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
